assets/css/style.css
/*------------ Body/Fonts --------------------------------------------------------*/
body{
    margin: 0;
    font-family: 'Lato', sans-serif;
    font-display: swap;
}

h1,h2,h3 {
    font-family: 'Raleway', sans-serif;
}

nav ul li a {
    font-family: 'Pridi', serif;
    font-weight: 300;
}
/*------------ Headers ------------------------------------------------------*/
.heroimage{
    background-image: url("https://i.imgur.com/IVwgjZ5.jpg");
    background-position: center;
    background-size: cover;
    height: 75vh;
}

#index-header{
  overflow: hidden;
}

.nav-container{
    display: flex;
    flex-direction: row-reverse;
    width: 100%;
    height: 11vh;
    background-color: #ebe9e9;
}

nav {
    width: 100%;
    position: relative;
    z-index: 2;
}

.navbar{
    padding: 0px 50px 0px 50px; /*Overriding bootstrap default*/
}

nav ul {
    display: flex;
    flex-direction: column;
    list-style: none;
    width: 100%;
    background-color: #ebe9e9;
    padding: 0;
}

nav ul li {
    width: 100%;
    margin-top: 10px;
    text-align: center;
    border: 2px solid rgb(0, 0, 0);
    border-radius: 30px;         
    background-color: rgb(95, 169, 204);    
    z-index: 2;
}

nav ul li:hover {
    border: 2px solid black;
}

nav ul li:hover a{
    color: rgb(255, 255, 255);  
    text-decoration: none;
}

nav ul li a {
    text-decoration: none;
    font-size: 25px;
    color: rgb(0, 0, 0); 
}

.navbar-toggler-icon {
    height: auto;
}

.navbar-toggler .fa {
    font-size: 7.5vh;
}

.nav-container button:focus, .nav-container button:hover{
    outline: none;
    border: 1px solid rgba(95, 95, 95,0.5);
}

.toggler-logo {
    height: 10vh;
    padding: 3px;
}

.logo {
   width: 12vw;
   height: auto;
   min-height:60px;
   max-height: 17vh;
   display: none;
   border: none;
}

.logo:hover{
    border: none;
}

#hero-quote-text{
    display: none;
    font-style: italic;
    font-family: 'Neucha', cursive;
    background-color: #ebe9e9;
}

#quote-author{
    font-size: 1vw;
    display:none;
}

/*---- Trips.html, Gallery.html, Contact.html Header-----*/

.header-container {
    background-color: rgb(221, 221, 221);
    width:100%;
}


/*--------------Main Content ------------------------------------------------------------*/

#home-container{
    display: flex;
    flex-direction: column;
    width: 100%;
}

#home-first-section, #home-second-section , #home-third-section  {
    background-color: #ebe9e9;   
    flex:1;
    text-align: center;
    padding: 0px 20px 15px 20px;
}

#home-second-section {
    background-color: #d4d4d4; 
}

#home-container h1 {
    padding-top: 20px;
    font-size: 20px;
    height: 70px;
}

#home-container p {
    font-size: 18px;
}

#home-container li {
    font-size: 19px;
    padding: 6px;
    border-bottom: 1px solid rgba(97,97,97, 0.4);
    list-style-type: none;
}

#home-container ul {
    padding: 0;
}

.home-icons{
    font-size: 50px;
    padding: 40px 0px;
    color: rgb(37, 37, 37);
}

#destinations{
    position: relative;
    height: 20vh;
    background-color: #ebe9e9;
    border-top: 1px solid grey;
}

#call-to-action{
    position:absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%); /* Code sourced from W3 schools. url("https://www.w3schools.com/howto/howto_css_center-vertical.asp") */
}

#home-button{
    background-color: rgb(39, 139, 185);
    border: 1px solid rgb(46, 46, 46);
    border-radius: 30px;
    font-size: 4vw;
    padding: 10px 20px;
}

/*----- trips.html Main Content -------*/

#cards{
    padding-top: 15px;
    padding-bottom: 30px;
    background-color:#ebe9e9;
}

#cards .container {
    padding-top: 15px;
    
}

.card{
    border: 4px solid rgb(226, 226, 226);
    width: 80vw;
    margin-left: auto;
    margin-right:auto;
}

#cards-heading{
    text-align: center;
    height: 10vh;
}

#cards-heading h1{
    color: rgb(43, 43, 43);
    line-height: 10vh;
    font-size: 6vw;
}

#cards hr {
    border-top: 2.5px solid rgba(0, 0, 0, 0.1);
}

#cards h2 {
    font-size: 1.5rem;
}

#ethiopia, #india, #mongolia, #mauritania {
    border: 2px solid rgb(116, 116, 116);
     background-size: cover;
    width: 100%;
    height: auto;
    min-height: 40vh;
}
#ethiopia, #india,#mongolia,#mauritania{
    background-color: #ebe9e9;
}

#background-india{
    background-image: url("https://i.imgur.com/FFAQZpj.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    height: 50vh;
    width:auto;
}

#background-ethiopia{
    background-image: url("https://i.imgur.com/hDjXYzp.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    height: 50vh;
    width:auto;
}

#background-mongolia{
    background-image: url("https://i.imgur.com/5okVH5v.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    height: 50vh;
    width:auto;
}

#background-mauritania{
    background-image: url("https://i.imgur.com/FVuBrQ3.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    height: 50vh;
    width:auto;
}

#trips-section h1 {
    font-size: 18px;
    color: black;
}

#trips-section p {
    font-size: 13px;
    color: black;
    margin-bottom: 0px;
    padding-bottom: 1rem;
}

#content-eth, #content-ind, #content-mong, #content-maur {
    background-color: rgba(255, 255, 255, 0.8);
    padding: 10px 20px 0px 20px;
    text-align: center;
    width: auto;
    height: auto;
    left: 0;
    top: 0;
}


.down-arrow{
    position: relative;
    font-size: 75px;
    height: 100%;
    width: auto;
}
.down-arrow a{
    position: absolute;
    bottom:0;
    left:50%;
    transform: translateX(-50%); /* Code sourced from Stack Overflow. User:thecraighammond. url("https://stackoverflow.com/questions/32206116/position-absolute-left50-does-not-position-span-in-the-middle") */
}

.down-arrow .fa, #up-arrow .fa {
    color: rgb(95, 169, 204);
    background-color: rgba(255, 255, 255, 0.2);
    display: none;
    text-decoration: none;
}
/* ... */

